<resources>
    <string name="app_name">音乐破解测试</string>
    <string name="amount">金额(单位分):</string>
    <string name="musicid">音乐编码:</string>
    <string name="musicprice">音乐价格:</string>
    <string name="musictype">音乐类型:</string>

    <string name="juletangceshi">聚乐堂测试: channel_id(014A1HA),cpparam(JH6653)</string>
    <string name="tianlaizhishengceshi">天籁之声测试: channel_id(014A1HJ),cpparam(JH6038)</string>
    <string name="yueyinyueceshi">悦音乐测试: channel_id(014A1IB),cpparam(JH6000)</string>
    <string name="tiantiankuyinceshi">天天酷音测试: channel_id(014A1IJ),cpparam(JH322222)</string>
    <string name="execute2yuan_btn">2元支付</string>
    <string name="execute1fen_btn">1分支付</string>
    <string name="executeYueyinyue10yuan_btn">10元付</string>
    <string name="executeYueyinyue30yuan_btn">30元付</string>
    <string name="execute6yuan">6元支付</string>
    <string name="hintProgress">这里您可以看到支付过程的提示信息</string>
    <string name="inputmusicid">musicid:</string>
    <string name="hintmusicid">输入musicid，不输入默认为默认值</string>
    <string name="hintmusicprice">输入价格(分)，不输入默认为默认值</string>
    <string name="promptinputmusicid">请输入musicid</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="executeTiantiankuyin10yuan_btn">10元付</string>
    <string name="executeTiantiankuyin30yuan_btn">30元付</string>
    <string name="juletang2_1fen">聚乐堂2的1分刷卡测试</string>
</resources>
